Fixed copyright content to float and align to the right.

--- a/resources/stylesheets/src/main.scss
+++ b/resources/stylesheets/src/main.scss
@@ -189,14 +189,14 @@ footer {
     float: left;
     margin: 65px 0 0 0;
 
-    .copyright {
-      @include span-columns(2);
-      float: right;
-      text-align: right;
-    }
+
   }
 
-
+  #copyright {
+    @include span-columns(2);
+    float: right;
+    text-align: right;
+  }
 }
 
 // Sign-in
